--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{erl_opts, [debug_info, warn_unused_import, warnings_as_errors, warn_missing_spec]}.
+{erl_opts, [debug_info, warn_unused_import, warnings_as_errors
+%%warn_missing_spec
+]}.
 
 {shell,
  %% {config, "config/sys.config"},
