--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
-{erl_opts, [debug_info, warn_unused_import, warnings_as_errors
+{erl_opts, [debug_info, warn_unused_import, warnings_as_errors]}.
+
 %%warn_missing_spec
-]}.
 
 {shell,
  %% {config, "config/sys.config"},
