--- a/rebar.config
+++ b/rebar.config
@@ -3,27 +3,27 @@
 %%warn_missing_spec
 
 {shell,
- %% {config, "config/sys.config"},
- [{apps, [elli_openapi]}]}.
+    %% {config, "config/sys.config"},
+    [{apps, [elli_openapi]}]}.
 
 {profiles, [{test, [{erl_opts, [nowarn_missing_spec]}]}]}.
 
-{deps,
- [{elli, "3.3.0"},
-  {erldantic, {git, "https://github.com/andreashasse/erldantic.git", {branch, "main"}}},
-  {eqwalizer_support,
-   {git_subdir,
-    "https://github.com/whatsapp/eqwalizer.git",
-    {branch, "main"},
-    "eqwalizer_support"}}]}.
+{deps, [
+    {elli, "3.3.0"},
+    {erldantic, {git, "https://github.com/andreashasse/erldantic.git", {branch, "main"}}},
+    {eqwalizer_support,
+        {git_subdir, "https://github.com/whatsapp/eqwalizer.git", {branch, "main"},
+            "eqwalizer_support"}}
+]}.
 
-{hank,
- [{ignore,
-   %% Ignore test files.
-   ["test/*.erl"]}]}.
+{hank, [
+    {ignore,
+        %% Ignore test files.
+        ["test/*.erl"]}
+]}.
 
-{project_plugins, [rebar3_format, rebar3_hank, rebar3_lint]}.
-
+{project_plugins, [erlfmt, rebar3_hank, rebar3_lint]}.
+{erlfmt, [write]}.
 {dialyzer, [{plt_apps, all_deps}, {warnings, [unknown, underspecs]}]}.
 
 {cover_enabled, true}.
