--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 {erl_opts, [debug_info, warn_unused_import, warnings_as_errors]}.
 
-%%warn_missing_spec
-
-{shell,
-    %% {config, "config/sys.config"},
-    [{apps, [elli_openapi]}]}.
+{shell, [
+    {apps, [elli_openapi]},
+    {script_file, "demo.escript"}
+]}.
 
 {profiles, [{test, [{erl_opts, [nowarn_missing_spec]}]}]}.
 
@@ -18,7 +17,6 @@
 
 {hank, [
     {ignore,
-        %% Ignore test files.
         ["test/*.erl"]}
 ]}.
 
