--- a/rebar.config
+++ b/rebar.config
@@ -16,8 +16,7 @@
 ]}.
 
 {hank, [
-    {ignore,
-        ["test/*.erl"]}
+    {ignore, ["test/*.erl"]}
 ]}.
 
 {project_plugins, [erlfmt, rebar3_hank, rebar3_lint]}.
