--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,9 @@
 
 {deps, [
     {elli, "3.3.0"},
-    {erldantic, {git, "https://github.com/andreashasse/erldantic.git", {branch, "main"}}},
+    {erldantic,
+        {git, "https://github.com/andreashasse/erldantic.git",
+            {branch, "content_type_response_body_and_response_headers_openapi"}}},
     {eqwalizer_support,
         {git_subdir, "https://github.com/whatsapp/eqwalizer.git", {branch, "main"},
             "eqwalizer_support"}}
