--- a/rebar.config
+++ b/rebar.config
@@ -5,26 +5,39 @@
     {script_file, "demo.escript"}
 ]}.
 
-{profiles, [{test, [{erl_opts, [nowarn_missing_spec]}]}]}.
+{profiles, [
+    {test, [
+        {erl_opts, [nowarn_missing_spec]},
+        {deps, [
+            {eqwalizer_support,
+                {git_subdir, "https://github.com/whatsapp/eqwalizer.git", {branch, "main"},
+                    "eqwalizer_support"}}
+        ]}
+    ]}
+]}.
 
 {deps, [
-    {elli, "3.3.0"},
-    {spectra, "~> 0.1.1"},
-    {eqwalizer_support,
-        {git_subdir, "https://github.com/whatsapp/eqwalizer.git", {branch, "main"},
-            "eqwalizer_support"}}
+    {elli, "~> 3.3.0"},
+    {spectra, "~> 0.1.1"}
 ]}.
 
 {hank, [
     {ignore, ["test/*.erl"]}
 ]}.
 
-{project_plugins, [erlfmt, rebar3_hank, rebar3_lint]}.
+{project_plugins, [erlfmt, rebar3_hank, rebar3_lint, rebar3_ex_doc, rebar3_check_app_calls]}.
 {erlfmt, [write]}.
-{dialyzer, [{plt_apps, all_deps}, {warnings, [unknown, underspecs]}]}.
+{dialyzer, [{plt_apps, all_deps}, {warnings, [unknown]}]}.
 
 {cover_enabled, true}.
 
 {cover_opts, [verbose]}.
 
 {cover_export_enabled, true}.
+
+{hex, [{doc, ex_doc}]}.
+{ex_doc, [
+    {extras, ["README.md"]},
+    {main, "README.md"},
+    {source_url, "https://github.com/andreashasse/elli_openapi"}
+]}.
