--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Run Hank
         run: make hank
 
+      - name: Check app calls
+        run: make
+
       - name: Generate coverage report
         run: make cover
 
